Fix overlapping text in headers.

--- a/firecares/firestation/static/firestation/theme/assets/less/style.less
+++ b/firecares/firestation/static/firestation/theme/assets/less/style.less
@@ -568,9 +568,6 @@ header{
 
 .ct-heading--main{
   padding: 60px 0;
-  h1,h2,h3,h4,h5,h6{
-    line-height: 18px;
-  }
 }
 
 .ct-buttonBox{
